--- a/src/sass/blocks/_footer.scss
+++ b/src/sass/blocks/_footer.scss
@@ -77,6 +77,10 @@
                 height: 40px;
                 margin: 0 10px;
                 font-size: 18px;
+                &:hover{
+                    background-color: transparent;
+                    color: #fff;
+                }
             }
         }
     }
