--- a/src/sass/blocks/_button.scss
+++ b/src/sass/blocks/_button.scss
@@ -48,6 +48,11 @@
     }
 
     .button{
+        &:hover{
+            border: none;
+            background-color: $red_color;
+            color: #FFF;
+        }
         &_promo{
             width: 225px;
             height: 40px;
