--- a/src/sass/blocks/_form.scss
+++ b/src/sass/blocks/_form.scss
@@ -16,6 +16,9 @@
             margin-bottom: 20px;
         }
     }
+    &_modal{
+        margin: 26px auto 0 auto;
+    }
 }
 
 @media(max-width: 576px){
