--- a/src/sass/blocks/_form.scss
+++ b/src/sass/blocks/_form.scss
@@ -1,19 +1,21 @@
 .form{
     width: 300px;
     margin-top: 36px;
-    input{
-        display: block;
-        width: 100%;
-        height: 54px;
+    &>div{
         margin-bottom: 15px;
-        padding: 0 21px;
-        border: none;
-        border-radius: 5px;
-        color: #4B4B4B;
-        font-size: 14px;
-        font-weight: 400;
         &:nth-child(3){
             margin-bottom: 20px;
+        }
+        input{
+            display: block;
+            width: 100%;
+            height: 54px;
+            padding: 0 21px;
+            border: none;
+            border-radius: 5px;
+            color: #4B4B4B;
+            font-size: 14px;
+            font-weight: 400;
         }
     }
     &_modal{
@@ -25,8 +27,10 @@
     .form{
         width: 225px;
         margin: 26px auto 0 auto;
-        input{
-            height: 44px;
+        &>div{
+            input{
+                height: 44px;
+            }
         }
     }
 }
