--- a/src/sass/blocks/_catalog.scss
+++ b/src/sass/blocks/_catalog.scss
@@ -92,9 +92,6 @@
             font-weight: 500;
             text-decoration-line: underline;
             text-transform: uppercase;
-            &:hover{
-                color: $red_color; 
-            }
         }
         hr{
             height: 1px;
@@ -200,6 +197,9 @@
             height: 35px;
             line-height: 33px;
             margin-bottom: 15px;
+            &:hover{
+                box-shadow: none;
+            }
         }
         &__content{
             margin-top: 30px;
