--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,3 +1,9 @@
+@import 'libs/bootstrap-reboot.min';
+@import 'libs/font';
+@import 'libs/ico';
+@import 'libs/tiny-slider.min';
+@import 'libs/animate';
+
 @import 'base/variables';
 @import 'base/animations';
 
